updated refresh functionality and added functionality to show only needed assignables